# NPLRuntime

./: .codedocs  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  INSTALL  README.md  ReadMe.txt  appveyor.yml  appveyor_yml_old  build_android.bat  build_android_github_workflows.sh  build_android_tegra.bat  build_boost.bat  build_emscripten.bat  build_emscripten.sh  build_ios.sh  build_ios_os.sh  build_ios_sim.sh  build_linux.sh  build_linux_github_workflows.sh  build_mac_client.sh  build_mac_client_with_nploce.sh  build_mac_server.sh  build_macos_github_workflows.sh  build_sdl2.sh  build_travis.sh  build_win32.bat  build_win32_github_workflows.bat  build_win32_with_nploce.bat  build_win_x64.bat  git_push.sh  npl_boost_install.sh  npl_install.sh  pull.sh
Client/: CMakeLists.txt
Client/cmake/: osx.cmake  win32.cmake
Client/trunk/: CMakeLists.txt
Client/trunk/ParaEngineClient/: CMakeLists.backup.txt  CMakeLists.txt  CMakeLists.txt.new  MSVCPCHSupport.cmake  PEClientInstall.cmake  ParaEngineClient.def  ParaEngineClientConfig.win32.h  ParaEngineRes.rc  ResourceEmbedded.cpp
Client/trunk/ParaEngineClientApp/: AutoUpdaterApp.cpp  AutoUpdaterApp.h  AutoUpdaterClient.cpp  AutoUpdaterClient.h  CMakeLists.txt  InterprocessAppClient.cpp  ParaEngineClientApp.cpp  ParaEngineClientApp.h  ParaEngineClientApp.rc  readme.txt  resource.h
Client/trunk/PhysicsBT/: CMakeLists.txt  ParaPhysicsBody.hpp  ParaPhysicsConstraint.hpp  ParaPhysicsShape.hpp  ParaPhysicsType.cpp  ParaPhysicsType.h  ParaPhysicsWorld.cpp  ParaPhysicsWorld.h  PhysicsBT.def  readme.txt
Client/trunk/cAudio_2.1.0/: CMakeLists.txt  License.txt  ReadMe.txt  changes.txt
Client/trunk/cAudio_2.4.0/: CMakeLists.txt
Client/trunk/cmake/: ConfigBoost.cmake  FindBoost.cmake  FindDirectX.cmake
NPLRuntime/: CMakeLists.txt
NPLRuntime/ParaEngine/: CMakeLists.txt  ResourceEmbedded.cpp
NPLRuntime/ParaEngine/2dengine/: EventBinding.cpp  EventBinding.h  FontRendererOpenGL.cpp  FontRendererOpenGL.h  GUIAttributeGrid.h  GUIBase.cpp  GUIBase.h  GUIButton.cpp  GUIContainer.cpp  GUIEdit.cpp  GUIEdit.h  GUIEvent.cpp  GUIEvent.h  GUIIME.cpp  GUIIME.h  GUIIMEDelegate.cpp  GUIIMEDelegate.h  GUIIMEEditBox.cpp  GUIIMEEditBox.h  GUIKeyboardVirtual.cpp  GUIKeyboardVirtual.h  GUIListBox.cpp  GUIMouseVirtual.cpp  GUIMouseVirtual.h  GUIRoot.cpp  GUIRoot.h  GUIScrollBar.cpp  GUISlider.cpp  GUIState.h  GUIText.cpp  GUIToolTip.h  GUIUniBuffer.cpp  GUIUniBuffer.h  GUIUniBufferDirectX.cpp  GUIUniBufferDirectX.h  GUIUniBufferOpenGL.cpp  GUIUniBufferOpenGL.h  TextureParams.cpp  TouchGesturePinch.cpp  TouchSessions.h
NPLRuntime/ParaEngine/3dengine/: AnimInstanceBase.cpp  AnimInstanceBase.h  AudioEngine2.cpp  AudioEngine2.h  AutoCamera.cpp  AutoCamera.h  BaseCamera.cpp  BaseCamera.h  BaseObject.cpp  BaseObject.h  BatchedElementDraw.cpp  BatchedElementDraw.h  BipedController.cpp  BipedController.h  BipedObject.cpp  BipedObject.h  BipedStateManager.cpp  BipedStateManager.h  BlockPieceParticle.cpp  BufferPicking.cpp  BufferPicking.h  CameraFrustum.cpp  CanvasCamera.cpp  CanvasCamera.h  ContainerObject.cpp  CustomCharCommon.cpp  CustomCharCommon.h  CustomCharFace.h  CustomCharModelInstance.cpp  CustomCharModelInstance.h  CustomCharSettings.cpp  EffectFileHandles.h  EnvironmentSim.cpp  Fog.cpp  GeosetObject.cpp  GeosetObject.h  IGameObject.cpp  IHeadOn3D.cpp  IHeadOn3D.h  IRefObject.h  (+85 more)
NPLRuntime/ParaEngine/AutoRigger/: AutoRigger.cpp  AutoRigger.h
NPLRuntime/ParaEngine/BMaxModel/: BMaxAnimGenerator.cpp  BMaxBlockModelNode.cpp  BMaxBlockModelNode.h  BMaxFrameNode.cpp  BMaxGlassModelNode.cpp  BMaxGlassModelNode.h  BMaxNode.cpp  BMaxNode.h  BMaxObject.cpp  BMaxObject.h  BMaxParser.cpp  BMaxParser.h  BlocksParser.cpp  BlocksParser.h  Rectangle.cpp
NPLRuntime/ParaEngine/BlockEngine/: BlockChunk.cpp  BlockChunk.h  BlockCoordinate.h  BlockDataCodec.h  BlockDirection.cpp  BlockDirection.h  BlockFacing.h  BlockLightGridBase.cpp  BlockLightGridBase.h  BlockLightGridClient.cpp  BlockLightGridClient.h  BlockMaterial.cpp  BlockMaterial.h  BlockMaterialManager.h  BlockModel.cpp  BlockModel.h  BlockModelProvider.cpp  BlockModelProvider.h  BlockReadWriteLock.h  BlockRegion.cpp  BlockRegion.h  BlockRenderTask.cpp  BlockRenderTask.h  BlockTemplate.cpp  BlockTemplate.h  BlockTessellators.cpp  BlockTessellators.h  BlockWorld.cpp  BlockWorld.h  BlockWorldClient.cpp  BlockWorldClient.h  BlockWorldManager.cpp  CarpetModelProvider.cpp  ChunkMaxHeight.cpp  ChunkVertexBuilderManager.cpp  ChunkVertexBuilderManager.h  MultiFrameBlockWorldRenderer.cpp  RenderableChunk.cpp  RenderableChunk.h  SlopeModelProvider.cpp  (+4 more)
NPLRuntime/ParaEngine/CadModel/: CadModel.cpp  CadModelNode.cpp
NPLRuntime/ParaEngine/CommonFramework/: DataTable.cpp
NPLRuntime/ParaEngine/Core/: AssetEntity.cpp  AssetEntity.h  AssetManager.h  AttributeClass.h  AttributeClassIDTable.h  AttributeModelProxy.h  CommandLineParams.cpp  CommandLineParams.h  ContentLoaderParaX.cpp  ContentLoaderTexture.cpp  ContentLoaderTexture.h  DynamicAttributeField.h  DynamicAttributesSet.cpp  DynamicAttributesSet.h  DynamicVertexBufferEntity.h  DynamicVertexBufferEntityDirectX.cpp  DynamicVertexBufferEntityDirectX.h  DynamicVertexBufferEntityOpenGL.cpp  DynamicVertexBufferEntityOpenGL.h  DynamicVertexBufferManager.cpp  DynamicVertexBufferManager.h  EventClasses.cpp  EventClasses.h  EventHandler.h  EventsCenter.cpp  Events_def.h  Globals.cpp  (+58 more)
NPLRuntime/ParaEngineClient/: CMakeLists.txt
NPLRuntime/ParaEngineClientApp/: .gitignore  CMakeLists.txt  InterprocessAppClient.cpp  InterprocessAppClient.h  ParaEngineClientApp.cpp  ParaEngineClientApp.h  ParaEngineClientApp.rc  config.h  version.txt
NPLRuntime/ParaEngineServer/: CMakeLists.txt  PEServerInstall.cmake
NPLRuntime/Platform/: CMakeLists.txt
NPLRuntime/Plugins/: CMakeLists.txt
NPLRuntime/RenderSystem/: CMakeLists.txt
NPLRuntime/cmake/: ConfigBoost.cmake  ConfigBoost.cmake.orig  MSVCMTD.cmake  ios.toolchain.cmake
NPLRuntime/embed-resource/: CMakeLists.txt  README.md  embedresource.cpp  embedresource.h
NPLRuntime/tests/: helloworld.lua
(+3358 files in other folders)
